--- a/sass/media.sass
+++ b/sass/media.sass
@@ -78,7 +78,7 @@
     .block-2
         p
             padding: 3px 0
-        button
+        .button
             padding: 4px 18px
         label
             font-size: 1.5em
@@ -128,6 +128,8 @@
             margin-right: auto
             margin-top: 90px
     .block-2
+        .col-6
+            margin-top: 20px
         p
             width: 100%
         img
@@ -136,8 +138,14 @@
         label
             font-size: .9em
             font-family: 'Proxima Nova Rg'
-        button
+        .button
             border-radius: 0
+            display: block
+            text-align: center
+        .button-desktop
+            display: block
+        .button-mobile
+            display: none
     .about
         iframe
             height: 140px
