--- a/sass/index.sass
+++ b/sass/index.sass
@@ -34,7 +34,7 @@ body
         border-radius: 0px
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3)
         background-color: #000
-button
+button, .button
     color: #FFF
     text-transform: uppercase
     background: transparent
@@ -128,6 +128,8 @@ ul, li, ol
     p
         text-align: right
         text-transform: uppercase
+        font-size: 1.1em
+        line-height: 1.8em
     button
         display: block
         padding: 10px 20px
@@ -161,10 +163,16 @@ ul, li, ol
         width: 75%
         padding: 10px 0
         margin-bottom: 10px
-    button
+    .button-desktop
+        display: inline-block
+    .button-mobile
+        display: none
+    .button
         border: 2px solid #1A52D3
         color: #000
         padding: 7px 20px
+        &.mr
+            margin-left: auto
     .go-right
         text-align: right
         p
@@ -214,6 +222,12 @@ ul, li, ol
     padding: 60px 0
     h2
         margin-bottom: 60px
+    iframe
+        width: 750px
+        height: 500px
+        max-width: 100%
+        display: block
+        margin: auto
     &__link
         display: block
         width: 100%
@@ -237,6 +251,7 @@ ul, li, ol
     background-color: #F1F1F1
     h2
         margin-bottom: 40px
+        line-height: 1em
     &__number
         text-align: center
         span
