--- a/sass/index.sass
+++ b/sass/index.sass
@@ -129,8 +129,12 @@ ul, li, ol
     margin-bottom: auto
   a
     display: block
+    img
+      @include transition(.3s)
     &:hover
       text-decoration: #FFF solid underline
+      img
+        @include transform(scale(1.1))
   .link
     font-size: 14px
     font-style: italic
@@ -199,6 +203,9 @@ ul, li, ol
     border: 2px solid #1A52D3
     color: #000
     padding: 7px 20px
+    &:hover
+      background-color: #1A52D3
+      color: #FFF
     &.mr
       margin-left: auto
   .go-right
@@ -246,8 +253,11 @@ ul, li, ol
       margin-bottom: 10px
       padding: 10px 0
       width: 100%
-      border: 0
+      border: 2px solid #1A52D3
       background-color: #1A52D3
+      &:hover
+        background-color: transparent
+        color: #000
 
 .instagram
   padding: 60px 0
@@ -322,6 +332,10 @@ ul, li, ol
       padding: 10px 0
       border: 0
       background-color: #1A52D3
+      border: 2px solid #1A52D3
+      &:hover
+        color: #000
+        background-color: transparent
     .political_par
       text-transform: uppercase
       font-style: italic
@@ -369,12 +383,14 @@ ul, li, ol
     border: 2px solid #1A52D3
     color: #000
     padding: 7px 25px
+    &:hover
+      color: #fff
+      background-color: #1A52D3
 
 .block-legal
   display: grid
   color: #FFF
-  background-image: url('../img/header-index.jpg')
-  background-position: center center
+  background: url('../img/header-index.jpg') center center
   background-size: cover
   h1
     text-align: center
@@ -383,6 +399,11 @@ ul, li, ol
 
 .this-is-legal
   padding: 50px 0
+  a
+    font-size: 1.2em
+    color: #000
+    &:hover
+      color: #777
 
 .modal-form
   z-index: 10
