--- a/sass/index.sass
+++ b/sass/index.sass
@@ -430,7 +430,8 @@ ul, li, ol
   padding: 50px 0
   a
     font-size: 1.2em
-    color: #000
+    color: #1A52D3
+    text-decoration: #1A52D3 solid underline
     &:hover
       color: #777
 
